# kaufland-discounts

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
kaufland/: config.py  models.py  utils.py
